--- a/src/package.json
+++ b/src/package.json
@@ -2,7 +2,7 @@
   "name": "bgio-tutorial",
   "version": "1.0.0",
   "description": "",
-  "main": "../upwardmobility/src/index.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
