--- a/upwardmobility/package.json
+++ b/upwardmobility/package.json
@@ -8,11 +8,14 @@
     "@testing-library/user-event": "^13.5.0",
     "boardgame.io": "^0.50.2",
     "bootstrap": "^5.2.3",
+    "esm": "^3.2.25",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "reactjs-popup": "^2.0.5",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
